fix: text overlapping for responsiveness submenu

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -27,3 +27,9 @@
   left: 40%;
   bottom: -15%;
 }
+
+@media screen and (max-width: 690px) {
+  .submenu {
+    margin-top: 2rem;
+  }
+}
